--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@
             <ul class="links">
                 <li><a href="#">Gmail</a></li>
                 <li><a href="#">Images</a></li>
-                <li><a href=""><img src="./images/appicon.png" alt="google_apps"></a></li>
+                <li class="icon"><a href="#" id="app-icon"><img src="./images/appicon.png" alt="google_apps"></a></li>
                 <li class="signin"><a href="#">Sign in</a></li>
             </ul>
         </div>
         <div class="logo">
-            <img src="./images/logo_color_272x92.png" alt="google">
+
         </div>
-        <div class="searcbox">
+        <div class="searchbox">
             <div class="magn-glass">
-                <img src="./images/Magnifying_glass_icon.png" alt="glass">
+
             </div>
             <div class="search-input">
                 <input type="search">
             </div>
             <div class="mic">
-                <img src="./images/google_microphone.png" alt="mic">
+
             </div>
         </div>
+
         <div class="buttons">
             <button>Google Search</button>
             <button>I'm Feeling Lucky</button>
         </div>
+
         <div class="languages">
             <p><span>Google offered in:</span><a href="#">Turkce</a> <a href="#">Svenska</a></p>
         </div>
